# eora

./: .gitignore  Dockerfile  README.md  compose.yml  config.py  main.py  pyproject.toml
handlers/: keyboard.py
modules/: BotHandler.py  communication.py
